# belt

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  install.ps1  install.sh  release-please-config.json
.claude/: settings.json
.claude/hooks/: block-env-edit.sh  branch-freshness-check.sh  post-edit-cargo-check.sh  pre-commit-check.sh  pre-pr-clippy-check.sh  pre-push-cargo-check.sh  validate-pr-title.sh
.claude/rules/: commit-convention.md  project.md  rust-cli.md  rust-core.md  rust-daemon.md  rust-infra.md  rust-stagnation.md  rust-test.md  spec-hierarchy.md  workspace-schema.md
.github/workflows/: ci.yml  release-please.yml  release.yml
crates/belt-cli/: Cargo.toml
crates/belt-cli/src/: agent.rs  bootstrap.rs  claw.rs  dashboard.rs  main.rs  status.rs
crates/belt-cli/src/auto/: mod.rs  plugin.rs
crates/belt-cli/src/claw/: mod.rs  plugin.rs  session.rs  slash.rs
crates/belt-cli/tests/: cli_integration.rs
crates/belt-core/: Cargo.toml
crates/belt-core/src/: action.rs  cipher.rs  context.rs  dependency.rs  error.rs  escalation.rs  evaluation.rs  lib.rs  lifecycle.rs  phase.rs  platform.rs  queue.rs  runtime.rs  source.rs  spec.rs  state_machine.rs  test_runner.rs  workspace.rs
crates/belt-core/src/stagnation/: lateral.rs  mod.rs  pattern.rs  similarity.rs
crates/belt-core/src/stagnation/personas/: architect.md  contrarian.md  hacker.md  researcher.md  simplifier.md
crates/belt-daemon/: Cargo.toml
crates/belt-daemon/src/: advancer.rs  concurrency.rs  cron.rs  daemon.rs  evaluation_stages.rs  evaluator.rs  executor.rs  hitl_service.rs  hook_cache.rs  lib.rs
crates/belt-daemon/tests/: advancer_integration.rs  cron_integration.rs  daemon_lifecycle.rs  e2e_helpers.rs  e2e_real.rs  escalation.rs  evaluator_integration.rs  gap_detection.rs
crates/belt-infra/: Cargo.toml
crates/belt-infra/src/: cipher.rs  db.rs  ipc.rs  lib.rs  onboarding.rs  script_hook.rs  test_runner.rs  workspace_loader.rs  worktree.rs
crates/belt-infra/src/hooks/: github.rs  mod.rs
crates/belt-infra/src/platform/: mod.rs  unix.rs  windows.rs
crates/belt-infra/src/runtimes/: claude.rs  codex.rs  gemini.rs  mock.rs  mod.rs
crates/belt-infra/src/sources/: github.rs  mock.rs
docs/: release-recovery.md
spec/: DESIGN-v5.md  DESIGN.md  README.md
spec/archive/v5/: DESIGN-v5.md  README.md
spec/archive/v5/concerns/: cron-engine.md  data-model.md  distribution.md  queue-state-machine.md
spec/archive/v5/flows/: 04-failure-and-hitl.md
spec/concerns/: agent-runtime.md  agent-workspace.md  claw-workspace.md  cli-reference.md  cron-engine.md  cross-platform.md  daemon.md  data-model.md  datasource.md  evaluator.md  lifecycle-hook.md  queue-state-machine.md  stagnation.md  workspace-schema.md
spec/draft/: DESIGN-v6.md  README.md
spec/draft/concerns/: agent-workspace.md  cli-reference.md  cron-engine.md  daemon.md  data-model.md  datasource.md  queue-state-machine.md  stagnation.md
spec/draft/flows/: 01-setup.md  02-spec-lifecycle.md  03-issue-pipeline.md  04-failure-and-hitl.md  05-monitoring.md
spec/flows/: 01-setup.md  02-spec-lifecycle.md  03-issue-pipeline.md  04-failure-and-hitl.md  05-monitoring.md
tests/: e2e-workspace.yaml
