[package]
name = "belt-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI interface for Belt"

[[bin]]
name = "belt"
path = "src/main.rs"

[dependencies]
belt-core = { workspace = true }
belt-infra = { workspace = true }
belt-daemon = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
